[tool.poetry]
authors = ["willclarktech <willclarktech@users.noreply.github.com>"]
description = "Template for Python projects"
name = "python_template"
packages = [{include = "python_template"}]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
jupyter = "^1.0.0"
mypy = "^0.991"
pylint = "^2.15.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
